tests/fixtures/LatestTests/VariableDeclarationTests/errors/str_to_char.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:char = "hello"

